--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,9 @@
   booktitle    = {The 46th International {ACM} {SIGIR} Conference on Research
                   and Development in Information Retrieval},
   year         = {2023},
-  abbr         = {SIGIR}
+  abbr         = {SIGIR},
+  arxiv        = {https://arxiv.org/abs/2304.14987},
+  code         = {https://github.com/xj-zhu98/KRDN}
 }
 
 
@@ -27,7 +29,8 @@
   title     = {Finding Materialized Models for Model Reuse},
   journal   = {IEEE Transactions on Knowledge and Data Engineering},
   year      = {2023},
-  abbr      = {TKDE}
+  abbr      = {TKDE},
+  arxiv     = {https://arxiv.org/abs/2110.06532},
 }
 
 
@@ -47,7 +50,9 @@
   year         = {2023},
   abbr         = {VLDB},
   selected     = {true},
-  preview      = {VLDB23_LDPTrace.jpg}
+  preview      = {VLDB23_LDPTrace.jpg},
+  arxiv        = {https://arxiv.org/abs/2302.06180},
+  code         = {https://github.com/zealscott/LDPTrace}
 }
 
 
@@ -66,7 +71,9 @@
   year         = {2023},
   abbr         = {WWW},
   selected     = {true},
-  preview      = {WWW23-ECF.jpg}
+  preview      = {WWW23-ECF.jpg},
+  arxiv        = {https://arxiv.org/abs/2304.13937},
+  code         = {https://github.com/zealscott/ECF}
 }
 
 
@@ -81,7 +88,8 @@
   title        = {{FLBooster}: A Unified and Efficient Platform for Federated Learning Acceleration},
   booktitle    = {39th {IEEE} International Conference on Data Engineering},
   year         = {2023},
-  abbr         = {ICDE}
+  abbr         = {ICDE},
+  pdf          = {https://ieeexplore.ieee.org/document/10184883},
 }
 
 @inproceedings{KDD22_ST2Vec,
@@ -97,7 +105,9 @@
                   and Data Mining, Washington},
   pages        = {347--356},
   year         = {2022},
-  abbr         = {SIGKDD}
+  abbr         = {SIGKDD},
+  arxiv        = {https://arxiv.org/abs/2112.09339},
+  code         = {https://github.com/zealscott/ST2Vec}
 }
 
 @inproceedings{SIGIR22_HAKG,
@@ -113,7 +123,9 @@
   year         = {2022},
   abbr         = {SIGIR},
   selected     = {true},
-  preview      = {SIGIR22_HAKG.jpg}
+  preview      = {SIGIR22_HAKG.jpg},
+  arxiv        = {https://arxiv.org/abs/2204.04959},
+  code         = {https://github.com/zealscott/HAKG}
 }
 
 @inproceedings{SIGIR22_SGDL,
@@ -129,7 +141,9 @@
                   and Development in Information Retrieval},
   pages        = {1412--1422},
   year         = {2022},
-  abbr         = {SIGIR}
+  abbr         = {SIGIR},
+  arxiv        = {https://arxiv.org/abs/2204.06832}, 
+  code         = {https://github.com/zealscott/SGDL}
 }
 
 @article{TKDE22_MetaKG22,
@@ -141,7 +155,9 @@
   title     = {{MetaKG:}  Meta-learning on Knowledge Graph for Cold-start Recommendation},
   journal   = {IEEE Transactions on Knowledge and Data Engineering},
   year      = {2022},
-  abbr      = {TKDE}
+  abbr      = {TKDE},
+  arxiv     = {https://arxiv.org/abs/2202.03851},
+  code      = {https://github.com/ZJU-DAILY/MetaKG}
 }
 
 @inproceedings{ICDE21_E2DTC,
@@ -156,7 +172,9 @@
   booktitle    = {37th {IEEE} International Conference on Data Engineering},
   pages        = {696--707},
   year         = {2021},
-  abbr         = {ICDE}
+  abbr         = {ICDE},
+  pdf          = {https://ieeexplore.ieee.org/document/9458936}
+  code         = {https://github.com/ZJU-DAILY/E2DTC}
 }
 
 @article{VLDB21_MDTP,
@@ -172,5 +190,6 @@
   number       = {8},
   pages        = {1289--1297},
   year         = {2021},
-  abbr         = {VLDB}
+  abbr         = {VLDB},
+  pdf          = {http://vldb.org/pvldb/vol14/p1289-gao.pdf}
 }
