--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,7 +52,8 @@
   selected     = {true},
   preview      = {VLDB23_LDPTrace.jpg},
   arxiv        = {https://arxiv.org/abs/2302.06180},
-  code         = {https://github.com/zealscott/LDPTrace}
+  code         = {https://github.com/zealscott/LDPTrace},
+  blog         = {https://zealscott.com/blog/2023/04/22/LDPTrace/}
 }
 
 
@@ -173,7 +174,7 @@
   pages        = {696--707},
   year         = {2021},
   abbr         = {ICDE},
-  pdf          = {https://ieeexplore.ieee.org/document/9458936}
+  pdf          = {https://ieeexplore.ieee.org/document/9458936},
   code         = {https://github.com/ZJU-DAILY/E2DTC}
 }
 
