--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,8 @@
   year         = {2023},
   abbr         = {SIGIR},
   arxiv        = {https://arxiv.org/abs/2304.14987},
-  code         = {https://github.com/xj-zhu98/KRDN}
+  code         = {https://github.com/xj-zhu98/KRDN},
+  type         = {Recommender Systems},
 }
 
 
@@ -31,6 +32,7 @@
   year      = {2023},
   abbr      = {TKDE},
   arxiv     = {https://arxiv.org/abs/2110.06532},
+  type      = {Misc},
 }
 
 
@@ -53,7 +55,8 @@
   preview      = {VLDB23_LDPTrace.jpg},
   arxiv        = {https://arxiv.org/abs/2302.06180},
   code         = {https://github.com/zealscott/LDPTrace},
-  blog         = {https://zealscott.com/blog/2023/04/22/LDPTrace/}
+  blog         = {https://zealscott.com/blog/2023/04/22/LDPTrace/},
+  type         = {Data Privacy},
 }
 
 
@@ -74,7 +77,8 @@
   selected     = {true},
   preview      = {WWW23-ECF.jpg},
   arxiv        = {https://arxiv.org/abs/2304.13937},
-  code         = {https://github.com/zealscott/ECF}
+  code         = {https://github.com/zealscott/ECF},
+  type         = {Recommender Systems},
 }
 
 
@@ -91,6 +95,7 @@
   year         = {2023},
   abbr         = {ICDE},
   pdf          = {https://ieeexplore.ieee.org/document/10184883},
+  type         = {Data Privacy},
 }
 
 @inproceedings{KDD22_ST2Vec,
@@ -108,7 +113,8 @@
   year         = {2022},
   abbr         = {SIGKDD},
   arxiv        = {https://arxiv.org/abs/2112.09339},
-  code         = {https://github.com/zealscott/ST2Vec}
+  code         = {https://github.com/zealscott/ST2Vec},
+  type         = {Spatio-temporal Data Mining},
 }
 
 @inproceedings{SIGIR22_HAKG,
@@ -126,7 +132,8 @@
   selected     = {true},
   preview      = {SIGIR22_HAKG.jpg},
   arxiv        = {https://arxiv.org/abs/2204.04959},
-  code         = {https://github.com/zealscott/HAKG}
+  code         = {https://github.com/zealscott/HAKG},
+  type         = {Recommender Systems},
 }
 
 @inproceedings{SIGIR22_SGDL,
@@ -144,7 +151,8 @@
   year         = {2022},
   abbr         = {SIGIR},
   arxiv        = {https://arxiv.org/abs/2204.06832}, 
-  code         = {https://github.com/zealscott/SGDL}
+  code         = {https://github.com/zealscott/SGDL},
+  type         = {Recommender Systems},
 }
 
 @article{TKDE22_MetaKG22,
@@ -158,7 +166,8 @@
   year      = {2022},
   abbr      = {TKDE},
   arxiv     = {https://arxiv.org/abs/2202.03851},
-  code      = {https://github.com/ZJU-DAILY/MetaKG}
+  code      = {https://github.com/ZJU-DAILY/MetaKG},
+  type      = {Recommender Systems},
 }
 
 @inproceedings{ICDE21_E2DTC,
@@ -175,7 +184,8 @@
   year         = {2021},
   abbr         = {ICDE},
   pdf          = {https://ieeexplore.ieee.org/document/9458936},
-  code         = {https://github.com/ZJU-DAILY/E2DTC}
+  code         = {https://github.com/ZJU-DAILY/E2DTC},
+  type         = {Spatio-temporal Data Mining},
 }
 
 @article{VLDB21_MDTP,
@@ -192,5 +202,6 @@
   pages        = {1289--1297},
   year         = {2021},
   abbr         = {VLDB},
-  pdf          = {http://vldb.org/pvldb/vol14/p1289-gao.pdf}
+  pdf          = {http://vldb.org/pvldb/vol14/p1289-gao.pdf},
+  type         = {Spatio-temporal Data Mining},
 }
