--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
   abbr         = {SIGIR},
   arxiv        = {https://arxiv.org/abs/2304.14987},
   code         = {https://github.com/xj-zhu98/KRDN},
-  topics       = {Recommender Systems},
+  topic        = {Recommender Systems},
 }
 
 
@@ -32,7 +32,7 @@
   year      = {2023},
   abbr      = {TKDE},
   arxiv     = {https://arxiv.org/abs/2110.06532},
-  topics    = {Misc},
+  topic     = {Misc},
 }
 
 
@@ -56,7 +56,7 @@
   arxiv        = {https://arxiv.org/abs/2302.06180},
   code         = {https://github.com/zealscott/LDPTrace},
   blog         = {https://zealscott.com/blog/2023/04/22/LDPTrace/},
-  topics       = {Data Privacy},
+  topic        = {Data Privacy},
 }
 
 
@@ -78,7 +78,7 @@
   preview      = {WWW23-ECF.jpg},
   arxiv        = {https://arxiv.org/abs/2304.13937},
   code         = {https://github.com/zealscott/ECF},
-  topics       = {Recommender Systems},
+  topic        = {Recommender Systems},
 }
 
 
@@ -95,7 +95,7 @@
   year         = {2023},
   abbr         = {ICDE},
   pdf          = {https://ieeexplore.ieee.org/document/10184883},
-  topics       = {Data Privacy},
+  topic        = {Data Privacy},
 }
 
 @inproceedings{KDD22_ST2Vec,
@@ -114,7 +114,7 @@
   abbr         = {SIGKDD},
   arxiv        = {https://arxiv.org/abs/2112.09339},
   code         = {https://github.com/zealscott/ST2Vec},
-  topics       = {Spatio-temporal Data Mining},
+  topic        = {Spatio-temporal Data Mining},
 }
 
 @inproceedings{SIGIR22_HAKG,
@@ -133,7 +133,7 @@
   preview      = {SIGIR22_HAKG.jpg},
   arxiv        = {https://arxiv.org/abs/2204.04959},
   code         = {https://github.com/zealscott/HAKG},
-  topics       = {Recommender Systems},
+  topic        = {Recommender Systems},
 }
 
 @inproceedings{SIGIR22_SGDL,
@@ -152,7 +152,7 @@
   abbr         = {SIGIR},
   arxiv        = {https://arxiv.org/abs/2204.06832}, 
   code         = {https://github.com/zealscott/SGDL},
-  topics       = {Recommender Systems},
+  topic        = {Recommender Systems},
 }
 
 @article{TKDE22_MetaKG22,
@@ -167,7 +167,7 @@
   abbr      = {TKDE},
   arxiv     = {https://arxiv.org/abs/2202.03851},
   code      = {https://github.com/ZJU-DAILY/MetaKG},
-  topics    = {Recommender Systems},
+  topic     = {Recommender Systems},
 }
 
 @inproceedings{ICDE21_E2DTC,
@@ -185,7 +185,7 @@
   abbr         = {ICDE},
   pdf          = {https://ieeexplore.ieee.org/document/9458936},
   code         = {https://github.com/ZJU-DAILY/E2DTC},
-  topics       = {Spatio-temporal Data Mining},
+  topic        = {Spatio-temporal Data Mining},
 }
 
 @article{VLDB21_MDTP,
@@ -203,5 +203,5 @@
   year         = {2021},
   abbr         = {VLDB},
   pdf          = {http://vldb.org/pvldb/vol14/p1289-gao.pdf},
-  topics       = {Spatio-temporal Data Mining},
+  topic        = {Spatio-temporal Data Mining},
 }
