--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,6 +4,23 @@
 @string{aps = {American Physical Society,}}
 
 
+@inproceedings{ICDE24_RetraSyn,
+  author       = {Yujia Hu and 
+                  Yuntao Du and 
+                  Zhikun Zhang and 
+                  Ziquan Fang and  
+                  Lu Chen and 
+                  Kai Zheng and
+                  Yunjun Gao},
+  title        = {Real-Time Trajectory Synthesis with Local Differential Privacy},
+  booktitle    = {40th {IEEE} International Conference on Data Engineering},
+  year         = {2024},
+  abbr         = {ICDE},
+  arxiv        = {2404.11450},
+  code         = {https://github.com/ZJU-DAILY/RetraSyn},
+  topic        = {Data Privacy},
+}
+
 @inproceedings{SIGIR23_HAKG,
   author       = {Xinjun Zhu and
                   Yuntao Du and
@@ -15,7 +32,7 @@
                   and Development in Information Retrieval},
   year         = {2023},
   abbr         = {SIGIR},
-  arxiv        = {https://arxiv.org/abs/2304.14987},
+  arxiv        = {2304.14987},
   code         = {https://github.com/xj-zhu98/KRDN},
   topic        = {Recommender Systems},
 }
@@ -31,7 +48,7 @@
   journal   = {IEEE Transactions on Knowledge and Data Engineering},
   year      = {2023},
   abbr      = {TKDE},
-  arxiv     = {https://arxiv.org/abs/2110.06532},
+  arxiv     = {2110.06532},
   topic     = {Misc},
 }
 
@@ -53,7 +70,7 @@
   abbr         = {VLDB},
   selected     = {true},
   preview      = {VLDB23_LDPTrace.jpg},
-  arxiv        = {https://arxiv.org/abs/2302.06180},
+  arxiv        = {2302.06180},
   code         = {https://github.com/zealscott/LDPTrace},
   blog         = {https://zealscott.com/blog/2023/04/22/LDPTrace/},
   topic        = {Data Privacy},
@@ -76,7 +93,7 @@
   abbr         = {WWW},
   selected     = {true},
   preview      = {WWW23-ECF.jpg},
-  arxiv        = {https://arxiv.org/abs/2304.13937},
+  arxiv        = {2304.13937},
   code         = {https://github.com/zealscott/ECF},
   topic        = {Recommender Systems},
 }
@@ -112,7 +129,7 @@
   pages        = {347--356},
   year         = {2022},
   abbr         = {SIGKDD},
-  arxiv        = {https://arxiv.org/abs/2112.09339},
+  arxiv        = {2112.09339},
   code         = {https://github.com/zealscott/ST2Vec},
   topic        = {Spatio-temporal Data Mining},
 }
@@ -131,7 +148,7 @@
   abbr         = {SIGIR},
   selected     = {true},
   preview      = {SIGIR22_HAKG.jpg},
-  arxiv        = {https://arxiv.org/abs/2204.04959},
+  arxiv        = {2204.04959},
   code         = {https://github.com/zealscott/HAKG},
   topic        = {Recommender Systems},
 }
@@ -150,7 +167,7 @@
   pages        = {1412--1422},
   year         = {2022},
   abbr         = {SIGIR},
-  arxiv        = {https://arxiv.org/abs/2204.06832}, 
+  arxiv        = {2204.06832}, 
   code         = {https://github.com/zealscott/SGDL},
   topic        = {Recommender Systems},
 }
@@ -165,7 +182,7 @@
   journal   = {IEEE Transactions on Knowledge and Data Engineering},
   year      = {2022},
   abbr      = {TKDE},
-  arxiv     = {https://arxiv.org/abs/2202.03851},
+  arxiv     = {2202.03851},
   code      = {https://github.com/ZJU-DAILY/MetaKG},
   topic     = {Recommender Systems},
 }
