--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,16 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{arxiv_synmeter,
+  author       = {Yuntao Du and 
+                  Ninghui Li},
+  title        = {Systematic Assessment of Tabular Data Synthesis Algorithms},
+  selected     = {true},
+  arxiv        = {2402.06806},
+  code         = {https://github.com/zealscott/SynMeter},
+  topic        = {Data Privacy},
+}
+
 
 @inproceedings{ICDE24_RetraSyn,
   author       = {Yujia Hu and 
@@ -146,7 +156,6 @@
   pages        = {1390--1400},
   year         = {2022},
   abbr         = {SIGIR},
-  selected     = {true},
   preview      = {SIGIR22_HAKG.jpg},
   arxiv        = {2204.04959},
   code         = {https://github.com/zealscott/HAKG},
