--- a/assets/bibliography/2023-04-22-LDPTrace.bib
+++ b/assets/bibliography/2023-04-22-LDPTrace.bib
@@ -4,7 +4,7 @@
                   Hakan Ferhatosmanoglu and
                   Divesh Srivastava},
   title        = {Real-World Trajectory Sharing with Local Differential Privacy},
-  journal      = {Proc. {VLDB} Endow.},
+  journal      = {Proc. VLDB Endow.},
   volume       = {14},
   number       = {11},
   pages        = {2283--2295},
@@ -19,7 +19,7 @@
                   Ninghui Li and
                   Somesh Jha},
   title        = {Locally Differentially Private Protocols for Frequency Estimation},
-  booktitle    = {26th {USENIX} Security Symposium},
+  booktitle    = {26th USENIX Security Symposium},
   pages        = {729--745},
   year         = {2017},
   url          = {https://www.usenix.org/conference/usenixsecurity17/technical-sessions/presentation/wang-tianhao}
@@ -33,7 +33,7 @@
                   Wenqi Wei},
   title        = {Utility-Aware Synthesis of Differentially Private and Attack-Resilient
                   Location Traces},
-  booktitle    = {Proceedings of the 2018 {ACM} {SIGSAC} Conference on Computer and
+  booktitle    = {Proceedings of the 2018 ACM SIGSAC Conference on Computer and
                   Communications Security},
   pages        = {196--211},
   year         = {2018},
