--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,15 +3,90 @@
 
 @string{aps = {American Physical Society,}}
 
-@inproceedings{arxiv_synmeter,
+
+
+@article{arxiv_cascading,
+  author       = {Yuntao Du and
+                  Jiacheng Li and
+                  Yuetian Chen and
+                  Kaiyuan Zhang and
+                  Zhizhen Yuan and
+                  Hanshen Xiao and
+                  Bruno Ribeiro and
+                  Ninghui Li},
+  title        = {Cascading and Proxy Membership Inference Attacks},
+  journal      = {arXiv preprint},
+  selected     = {true},
+  year         = {2025},
+  preview      = {CPMIA.png},
+  topic        = {Data Privacy},
+}
+
+@article{arxiv_profile,
+  author       = {Yuntao Du and
+                  Zitao Li and
+                  Bolin Ding and
+                  Yaliang Li and
+                  Hanshen Xiao and
+                  Jingren Zhou and
+                  Ninghui Li},
+  title        = {Automated Profile Inference with Language Model Agents},
+  journal      = {arXiv preprint},
+  selected     = {true},
+  arxiv        = {2505.12402},
+  year         = {2025},
+  code         = {https://github.com/zealscott/AutoProfiler},
+  preview      = {AutoProfiler.png},
+  topic        = {Data Privacy},
+}
+
+@article{arxiv_synmeter,
   author       = {Yuntao Du and 
                   Ninghui Li},
   title        = {Systematic Assessment of Tabular Data Synthesis Algorithms},
+  journal      = {arXiv preprint},
+  year         = {2025},
   selected     = {true},
   arxiv        = {2402.06806},
   code         = {https://github.com/zealscott/SynMeter},
+  preview      = {SynMeter.png},
   topic        = {Data Privacy},
 }
+
+@article{arxiv_diffusion,
+  author       = {Yuetian Chen and
+                  Kaiyuan Zhang and
+                  Yuntao Du and
+                  Edoardo Stoppa and
+                  Charles Fleming and
+                  Ashish Kundu and
+                  Bruno Ribeiro and
+                  Ninghui Li},
+  title        = {Membership Inference Attacks Against Fine-tuned Diffusion-Based Language Models},
+  journal      = {arXiv preprint},
+  year         = {2025},
+  topic        = {Data Privacy},
+}
+
+@inproceedings{usenix25_soft,
+  author       = {Kaiyuan Zhang and
+                  Siyuan Cheng and
+                  Hanxi Guo and
+                  Yuetian Chen and
+                  Zian Su and
+                  Shengwei An and
+                  Yuntao Du and
+                  Charles Fleming and
+                  Ashish Kundu and
+                  Xiangyu Zhang and
+                  Ninghui Li},
+  title        = {{SOFT:} Selective Data Obfuscation for Protecting {LLM} Fine-tuning against Membership Inference Attacks},
+  booktitle    = {USENIX Security Symposium (USENIX Security)},
+  year         = {2025},
+  abbr         = {USENIX Security},
+  topic        = {Data Privacy},
+}
+
 
 
 @inproceedings{ICDE24_RetraSyn,
@@ -23,7 +98,7 @@
                   Kai Zheng and
                   Yunjun Gao},
   title        = {Real-Time Trajectory Synthesis with Local Differential Privacy},
-  booktitle    = {40th {IEEE} International Conference on Data Engineering},
+  booktitle    = {{IEEE} International Conference on Data Engineering},
   year         = {2024},
   abbr         = {ICDE},
   arxiv        = {2404.11450},
@@ -38,7 +113,7 @@
                   Baihua Zheng and
                   Yunjun Gao},
   title        = {Knowledge-refined Denoising Network for Robust Recommendation},
-  booktitle    = {The 46th International {ACM} {SIGIR} Conference on Research
+  booktitle    = {International {ACM} {SIGIR} Conference on Research
                   and Development in Information Retrieval},
   year         = {2023},
   abbr         = {SIGIR},
@@ -78,7 +153,6 @@
   pages        = {1897--1909},
   year         = {2023},
   abbr         = {VLDB},
-  selected     = {true},
   preview      = {VLDB23_LDPTrace.jpg},
   arxiv        = {2302.06180},
   code         = {https://github.com/zealscott/LDPTrace},
@@ -101,7 +175,6 @@
   pages        = {3712--3722},
   year         = {2023},
   abbr         = {WWW},
-  selected     = {true},
   preview      = {WWW23-ECF.jpg},
   arxiv        = {2304.13937},
   code         = {https://github.com/zealscott/ECF},
@@ -118,7 +191,7 @@
                   Guodong Chen and 
                   Hui Wang and Yunjun Gao},
   title        = {{FLBooster}: A Unified and Efficient Platform for Federated Learning Acceleration},
-  booktitle    = {39th {IEEE} International Conference on Data Engineering},
+  booktitle    = {{IEEE} International Conference on Data Engineering},
   year         = {2023},
   abbr         = {ICDE},
   pdf          = {https://ieeexplore.ieee.org/document/10184883},
@@ -134,7 +207,7 @@
                   Yunjun Gao and
                   Christian S. Jensen},
   title        = {Spatio-Temporal Trajectory Similarity Learning in Road Networks},
-  booktitle    = {The 28th {ACM} {SIGKDD} Conference on Knowledge Discovery
+  booktitle    = {{ACM} {SIGKDD} Conference on Knowledge Discovery
                   and Data Mining, Washington},
   pages        = {347--356},
   year         = {2022},
@@ -151,7 +224,7 @@
                   Baihua Zheng and
                   Yunjun Gao},
   title        = {{HAKG:} Hierarchy-Aware Knowledge Gated Network for Recommendation},
-  booktitle    = {The 45th International {ACM} {SIGIR} Conference on Research
+  booktitle    = {International {ACM} {SIGIR} Conference on Research
                   and Development in Information Retrieval},
   pages        = {1390--1400},
   year         = {2022},
@@ -171,7 +244,7 @@
                   Ziquan Fang and
                   Baihua Zheng},
   title        = {Self-Guided Learning to Denoise for Robust Recommendation},
-  booktitle    = {The 45th International {ACM} {SIGIR} Conference on Research
+  booktitle    = {International {ACM} {SIGIR} Conference on Research
                   and Development in Information Retrieval},
   pages        = {1412--1422},
   year         = {2022},
@@ -205,7 +278,7 @@
                   Gang Chen},
   title        = {E$^2$DTC: An End to End Deep Trajectory Clustering Framework
                   via Self-Training},
-  booktitle    = {37th {IEEE} International Conference on Data Engineering},
+  booktitle    = {{IEEE} International Conference on Data Engineering},
   pages        = {696--707},
   year         = {2021},
   abbr         = {ICDE},
@@ -231,3 +304,4 @@
   pdf          = {http://vldb.org/pvldb/vol14/p1289-gao.pdf},
   topic        = {Spatio-temporal Data Mining},
 }
+
